# drug-classification

./: .gitignore  .pre-commit-config.yaml  README.md  classification_network.py  encoder.py  infer.py  model.ipynb  model.pt  my_dataset.py  pyproject.toml  train.py
.dvc/: config
config/: config.yaml
data/: .gitignore  test-drug200.csv.dvc  train-drug200.csv.dvc
nvidia-triton/: Dockerfile  docker-compose.yaml
nvidia-triton/model_repository/onnx-logreg/: 1  config.pbtxt
onnx/: 1
